--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,14 @@
+@import url('https://rsms.me/inter/inter.css');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  input {
+    @apply rounded-lg w-96 h-10 mt-8 border-blue-600 text-blue-600;
+  }
+  h1 {
+    @apply text-2xl font-semibold;
+  }
+}
